fix LY calculation to be accurate to ingame equivalent
